# rookie-guide

./: .env.example  .gitignore  Cargo.toml  DATABASE.md  GETTING_STARTED.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  prd.md
.cargo/: config.toml
.cursor/rules/: rs-common.mdc
crates/api/: Cargo.toml
crates/api/src/: docs.rs  main.rs  routes.rs  state.rs
crates/api/src/handlers/: auth.rs  checklist.rs  health.rs  mod.rs  template.rs  user.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  lib.rs  password.rs
crates/common/: Cargo.toml
crates/common/src/: api_response.rs  config.rs  error.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: di.rs  lib.rs
crates/core/src/services/: checklist_service.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs
crates/db/src/repositories/: mod.rs  template_repository.rs  user_checklist_repository.rs  user_repository.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20241021_000001_create_users.rs  m20241021_000002_create_templates.rs  m20241021_000003_create_user_checklists.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  template.rs  user.rs  user_checklist.rs
crates/service_layer/: Cargo.toml
crates/service_layer/src/: di.rs  lib.rs
crates/service_layer/src/services/: checklist_service.rs  mod.rs  template_service.rs  user_service.rs
