[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Local crates
common = { path = "../common" }
models = { path = "../models" }
service_layer = { path = "../service_layer" }
db = { path = "../db" }
auth = { path = "../auth" }
migration = { path = "../migration" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# OpenAPI 文档
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-redoc.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sea-orm.workspace = true

# Utilities
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

